Update: created logout, edit-profile, delete-profile pages. Fix: fixed css where the styles were overlapping

--- a/styles/address-book.css
+++ b/styles/address-book.css
@@ -1,14 +1,7 @@
-body {
-    margin: 0;
-    background-color: #f9f9f9;
-    display: flex;
-    height: 100vh;
-}
-
 .book-container {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 /* Sidebar styling */
