--- a/styles/auth-forms.css
+++ b/styles/auth-forms.css
@@ -68,12 +68,31 @@ button:hover {
     text-decoration: underline;
 }
 
+button.delete {
+    background: linear-gradient(45deg, #d9534f, #c12e2a);
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+    padding: 1rem;
+    transition: background-color 0.5s, transform 0.3s;
+}
+
+button.delete:hover {
+    background: linear-gradient(45deg, #c12e2a, #d9534f);
+    transform: scale(1.01);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+
 @media (max-width: 768px) {
     .form-container {
         width: 100%;
         height: 100vh;
         margin: 0;
         align-content: center;
+        background: linear-gradient(to bottom, #dceeff, #ffffff);
     }
 
     h1 {
