--- a/styles/profile.css
+++ b/styles/profile.css
@@ -142,6 +142,12 @@
 
 @media (max-width: 768px) {
     .profile-card {
-        height: 100vh;
+        height: auto;
+    }
+}
+
+@media (max-width: 425px) {
+    .profile-info .info-grid {
+        grid-template-columns: none;
     }
 }
